<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/card_background"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/physician"
        android:textColor="@color/black"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/flashcard_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_below="@id/flashcard_question"
        android:text="@string/allison_fils"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="50sp"/>


    <TextView
        android:id="@+id/flashcard_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/flashcard_answer1"
        android:text="@string/john_snow"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/flashcard_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/flashcard_answer2"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/max_weber"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/flashcard_answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/flashcard_answer3"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/isaac_newton"
        android:textColor="@color/black"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/flashcard_answer4"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:text="@string/reveal_the_answer"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/editby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/edit_by_tk_dreamer"
        android:textColor="@color/black"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/flashcard_answer5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_below="@id/flashcard_question"
        android:text="@string/isaac_newton"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:visibility="invisible"/>
</RelativeLayout>